log
Fri, May 16, 2025  7:32:35 PM: 
 sudoku.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:56:9: error: implicit declaration of function 'is_final' [-Werror=implicit-function-declaration]
     if (is_final(n)) return lista;
         ^~~~~~~~
sudoku.c:58:18: error: unused variable 'l' [-Werror=unused-variable]
     int i, j, k, l;
                  ^
cc1.exe: all warnings being treated as errors
3f0e54c
